k8/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name:  online-app
  labels:
    environment: production
