k8/service.yml
apiVersion: v1
kind: Service
metadata:
  name: online-app-service
  namespace: online-app
spec:
  selector:
    app: online-app
  ports:
  - name: http
    port: 80
    targetPort: 80
  type: ClusterIP
